@@ -33,6 +33,7 @@
 ** Collaboration
 *** <<plugin/clb/team/index.adoc#, Team>>
 ** Planning
+*** <<plugin/pln/agree/index.adoc#, Agree>>
 *** <<plugin/pln/blow/index.adoc#, Blow>>
 *** <<plugin/pln/callboard/index.adoc#, CallBoard>>
 *** <<plugin/pln/sla/index.adoc#, SLA>>
